# sudoku-solver

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  dependencies.txt  dependencies_dev.txt  dependencies_dev_pip.txt  docker-compose.yml  run
.github/workflows/: app.yml
cmake/: coverage.cmake  format.cmake
susolver/: CMakeLists.txt  Main.cpp
susolver/algorithm/: CMakeLists.txt
susolver/algorithm/include/algorithm/: Algorithm.hpp  BruteForce.hpp  Rules.hpp  Solution.hpp  Utils.hpp
susolver/algorithm/src/: BruteForce.cpp  Utils.cpp
susolver/algorithm/tests/: BruteForceTests.cpp  CMakeLists.txt  UtilsTests.cpp
susolver/generator/: CMakeLists.txt
susolver/generator/include/generator/: Generation.hpp  Permutations.hpp
susolver/generator/src/: Generation.cpp  Permutations.cpp
susolver/generator/tests/: CMakeLists.txt  PermutationTests.cpp
susolver/sudoku/: CMakeLists.txt
susolver/sudoku/include/sudoku/: Cell.hpp  Constraints.hpp  Coordinates.hpp  Grid.hpp  Number.hpp  Subgrid.hpp
susolver/sudoku/src/: Cell.cpp  Constraints.cpp  Coordinates.cpp  Grid.cpp  Subgrid.cpp
susolver/sudoku/tests/: CMakeLists.txt  CellTests.cpp  ConstraintsTests.cpp  GridTests.cpp  SubgridTests.cpp
tests/: CMakeLists.txt  smoke.sh
tests/e2e/: CMakeLists.txt  conftest.py  test_executable.py
tests/ut/: CMakeLists.txt
tests/ut/utils/include/utils/: String.hpp
tests/utils/: CMakeLists.txt
tests/utils/src/: String.cpp
